Data Spark.ipynb

--- a/Data Spark.ipynb
+++ b/Data Spark.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "# Step 2: Connect to MySQL using SQLAlchemy\n",
     "# Replace USERNAME, PASSWORD, HOST, and DATABASE with your MySQL credentials\n",
-    "engine = create_engine('mysql+pymysql://root:mysql4505@127.0.0.1/globaltech')\n",
+    "engine = create_engine('mysql+pymysql://root:mysql@127.0.0.1/globaltech')\n",
     "\n",
     "# Step 3: Insert DataFrames into MySQL\n",
     "# Specify the table names you want to insert data into\n",
